--- a/tcf_website/templates/course/user_courses.html
+++ b/tcf_website/templates/course/user_courses.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <div class="container mx-auto">
-    <h1 class="h2 mt-2 mb-0">My reviews</h1>
+    <h1 class="h2 mt-2">Saved Courses </h1>
     {% if courses %}
     {% for dept, dept_data in courses.items %}
         <h2 class="mt-5 h3">{{ dept }}</h2>
