--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -36,6 +36,7 @@
           <div class="dropdown-menu settings" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
             <a class="dropdown-item" href="{% url 'reviews' %}">My Reviews</a>
+            <a class="dropdown-item" href="{% url 'courses' %}">Saved Courses</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
           </div>
