Empty course page - changed query to boolean type

--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -34,7 +34,7 @@
             <br/>
             <br/>
 
-            {% if not this_semester_instructors %}
+            {% if not taught_this_semester %}
                 <div class="new card col p-5 text-center">
                     <div class="card-body">
                         <h4 class="card-title">
