--- a/tcf_website/static/base/sidebar.css
+++ b/tcf_website/static/base/sidebar.css
@@ -38,23 +38,20 @@ body {
   filter: brightness(125%);
 }
 
-/* For the quad version
 #sidebar-wrapper .icon-section{
   width: 100%;
-  padding-bottom: 1.5rem;
+  padding: 0rem .5rem 1rem;
 }
 
 #sidebar-wrapper .icon-wrapper{
   display:inline-block;
-  width: 50%;
+  width: 33%;
 }
 
 #sidebar-wrapper .icon-wrapper i {
-  font-size: 2.15rem;
-}*/
+  font-size: 1.25rem;
+}
 
-
-/* Shared between the versions */
 #sidebar-wrapper .left-icon{
   float: left;
 }
@@ -62,24 +59,6 @@ body {
 #sidebar-wrapper .right-icon{
   float: right;
 }
-
-
-/* For the row version*/
-#sidebar-wrapper .icon-section{
-  width: 100%;
-  padding-bottom: 1rem;
-}
-
-#sidebar-wrapper .icon-wrapper{
-  display:inline-block;
-  width: 25%;
-}
-
-#sidebar-wrapper .icon-wrapper i {
-  font-size: 1.15rem;
-}
-
-
 
 #page-content-wrapper {
   min-width: 100vw;
