Course page empty (#374)
* Added text on empty course page

* Added text on empty course page (precommit)

* Added card formatting to empty course page

* Empty course page - changed query to boolean type

* Empty course page - revert autoformat changes

* Update tcf_website/views/browse.py

Co-authored-by: Jihoon Park <bartleby2718@gmail.com>

--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -34,6 +34,19 @@
             <br/>
             <br/>
 
+            {% if not taught_this_semester %}
+                <div class="new card col p-5 text-center">
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            Looks like this course isn't being taught this semester. <i class="far fa-frown-open fa-fw"></i>
+                        </h4>
+                        <p class="card-text">
+                            Sort by "All" in the top right to see previous semesters.
+                        </p>
+                    </div>
+                </div>
+            {% endif %}
+
             <ul class="instructor-list">
                 {% for i in instructors %}
                     <li class="instructor {% if i.semester_last_taught != latest_semester %}old{% endif %}">
