--- a/tcf_website/templates/login/extra_info_form.html
+++ b/tcf_website/templates/login/extra_info_form.html
@@ -5,17 +5,17 @@
 
 <div class="container-fluid col-lg-9 col-xl-7 justify-content-center">
   <div class="card text-center">
-    <div class="card-body" style="padding: 25px;">
-        <img style="width: auto; height: 150px;" src="{% static 'base/img/new_logo.png' %}" class="card-img-top" alt="tCF" width="auto">
+    <div class="card-body p-5">
+        <img style="width: auto; height: 5em;" src="{% static 'base/img/new_logo.png' %}" class="card-img-top" alt="tCF">
         {% block login_content %}
         <h2 class="card-title">Welcome to theCourseForum!</h2>
+        <p> Please finish completing your profile. </p>
         <form method="POST">
             {% csrf_token %}
-            <div class="form-group">
-                <div id="course-form-input" class="input-group">
-                    Please enter your graduation year: {{ form.grad_year }} <br>
-                    <input type="submit" value="Submit">
-                </div>
+            <div class="form-row justify-content-center align-items-baseline">
+                <label for="id_grad_yr"> Graduation Year </label>
+                <div class="col-2 ml-2"> {{form.grad_year}} </div>
+                <input class="btn btn-primary" type="submit" value="Submit">
             </div>
         </form>
         {% endblock %}
