--- a/tcf_website/templates/common/toolbar.html
+++ b/tcf_website/templates/common/toolbar.html
@@ -29,14 +29,10 @@
         {% if sorting %}
         <div id="sortButtons" class="btn-group btn-group-sm"
              role="toolbar" aria-label="Sorting Buttons">
-            <button type="button" id="number-sort-btn" class="btn btn-outline-primary active">Course ID</button>
-            <button type="button" id="rating-sort-btn" class="btn btn-outline-primary">Rating</button>
-            <button type="button" id="diff-sort-btn" class="btn btn-outline-primary">Difficulty</button>
-            <button type="button" id="gpa-sort-btn" class="btn btn-outline-primary">GPA</button>
-            <div class="btn-group btn-group-sm">
-                <button type="button" id="ascending-order-btn" class="btn btn-outline-primary active"><i class="fa fa-angle-up"></i></button>
-                <button type="button" id="descending-order-btn" class="btn btn-outline-primary"><i class="fa fa-angle-down"></i></button>
-            </div>
+            <button type="button" id="number-sort-btn" class="btn btn-outline-primary active">Course ID ⬆</button>
+            <button type="button" id="rating-sort-btn" class="btn btn-outline-primary"> Rating</button>
+            <button type="button" id="diff-sort-btn" class="btn btn-outline-primary"> Difficulty</button>
+            <button type="button" id="gpa-sort-btn" class="btn btn-outline-primary"> GPA</button>
         </div>
 
         {% endif %}
