--- a/tcf_website/static/base/sidebar.css
+++ b/tcf_website/static/base/sidebar.css
@@ -28,7 +28,6 @@ body {
 #sidebar-wrapper .list-group-item, .footer, .footer a {
   background-color: var(--main-color);
   color: var(--background-color);
-  padding-top: 1rem;
   border: 0rem;
 }
 
@@ -37,6 +36,28 @@ body {
   color: white;
   border-color: var(--main-color);
   filter: brightness(125%);
+}
+
+#sidebar-wrapper .icon-section{
+  width: 100%;
+  padding: 0rem .5rem 1rem;
+}
+
+#sidebar-wrapper .icon-wrapper{
+  display:inline-block;
+  width: 33%;
+}
+
+#sidebar-wrapper .icon-wrapper i {
+  font-size: 1.25rem;
+}
+
+#sidebar-wrapper .left-icon{
+  float: left;
+}
+
+#sidebar-wrapper .right-icon{
+  float: right;
 }
 
 #page-content-wrapper {
