--- a/tcf_website/templates/reviews/review.html
+++ b/tcf_website/templates/reviews/review.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'reviews/review.css' %}" />
 
 <div id="review{{review.id}}" class="review card mb-2">
-    <div class="card-body text-left pr-4">
+    <div class="card-body text-left pt-0 pr-4">
         <div class="row">
             <!-- Review upvote/downvote panel -->
             <div class="vote-container col-2 col-lg-1 d-none d-md-flex flex-column justify-content-center align-items-center">
@@ -45,8 +45,19 @@
                 </div>
                 {% endif %}
 
-                <div class="review-content">
-                  <p class="card-text mb-2" style="white-space: pre-line;">{{ review.text }}</p>
+                <div class="review-content mb-2">
+                  <!-- Max-height container for the review text collapse feature -->
+                  <div class="review-text-body collapse" id="reviewText{{review.id}}"
+                     aria-expanded="false">
+                     <!-- Full review text -->
+                    <p class="review-text-full">{{ review.text }}</p>
+                  </div>
+                  <!-- Collapser link (click target spans entire row block) -->
+                  <a role="button" class="review-collapse-link btn-block p-1 collapsed"
+                     data-toggle="collapse" href="#reviewText{{review.id}}"
+                     aria-expanded="false" aria-controls="reviewText{{review.id}}">
+                     <!-- Note: collapser text ("See more...") is encoded in review.css for this link -->
+                  </a>
                 </div>
 
                 <div class="review-footer row mt-3">
