--- a/tcf_website/templates/instructor/instructor.html
+++ b/tcf_website/templates/instructor/instructor.html
@@ -63,8 +63,8 @@
         </div>
     </div>
     {% if courses %}
-    {% for subdepartment__name, dept_data in courses.items %}
-        <h2 class="mt-5 h3">{{ subdepartment__name }}</h2>
+    {% for subdepartment_name, dept_data in courses.items %}
+        <h2 class="mt-5 h3">{{ subdepartment_name }}</h2>
         {% for course in dept_data %}
         <div class="card mt-3">
             <a href="{% url 'course_instructor' course_id=course.id instructor_id=instructor.id %}">
