--- a/tcf_website/templates/reviews/new_review.html
+++ b/tcf_website/templates/reviews/new_review.html
@@ -15,6 +15,7 @@
     <form class="card-body px-md-5" id="reviewForm" action="{% url 'new_review' %}" method="POST">
         {% csrf_token %}
         {% include 'reviews/review_form_content.html' %}
+        {% include 'reviews/duplicate_review_modal.html' %}
         <div class="new-review-submit row py-4">
           <button type="submit" class="btn btn-primary mx-auto" id="submitBtn">Submit Review</button>
         </div>
@@ -34,35 +35,36 @@
     $('[data-toggle="tooltip"]').tooltip()
   });
 
-  $('#submitBtn').on('click', function(e) {
-        var submit = true;
+  $(document).ready(function () {
+    // Stop normal submit to check for duplicate review with ajax request
+    $("#reviewForm").submit(function(e) {
+        e.preventDefault();
 
         $.ajax({
-            type: 'POST',
-            url: '/reviews/new',
-            dataType: "json",
+            type: "POST",
+            url: "/reviews/check_duplicate",
             data: $("#reviewForm").serialize(),
             async: false,
-            success: function(json) {
-                if(json.duplicate) {
-                    alert("You have already submitted a review for this course!");
-                    submit = false;
+            success: function (check) {
+                if(check.duplicate) {
+                    $("#duplicate-review").modal();
+                } else {
+                    // Timeout button for 3 seconds so user can't spam button while form is submitting
+                    $("#submitBtn").prop("disabled", true);
+                    setTimeout(enableButton, 3000);
+                    // $("#reviewForm") didn't work for some reason
+                    // Not a duplicate review, so proceed with normal form submission for new review
+                    document.getElementById("reviewForm").action = "{% url 'new_review' %}";
+                    document.getElementById("reviewForm").submit();
                 }
             }
         });
-
-        if(submit) {
-            document.getElementById("submitBtn").style = 'hidden';
-            setTimeout(function () { reenableButton(); }, 3000);
-        }
-
-        return submit;
+    });
   });
 
-  function reenableButton() {
-        // Sets button back to initial state
-        document.getElementById("submitBtn").disabled = false;
-        return true;
+  // Re-enable button
+  function enableButton() {
+        $("#submitBtn").prop("disabled", false);
   }
 
 </script>
