Improve instructor_view (#423)
* Fix #422 "Server Error" shown for invalid instructor_id in instructor_view

Fix #422"Server Error" shown for invalid instructor_id in instructor_view

Fix #422 "Server Error" shown for invalid instructor_id in instructor_view

* Fix #210 Improve efficiency of instructor subdepartment query

* Write tests for instructor_view

* Fix typos

* Rename variables for clarity and fix whitespace

* Stop hardcoding expected values in `test_instructor_view`

* Rename variable: subdept -> subdepartment__name

* Rename variable: subdepartment__name -> subdepartment_name

* Change name of dept_data to something more clear

Co-authored-by: Alex Shen <shen.alexander@gmail.com>

--- a/tcf_website/templates/instructor/instructor.html
+++ b/tcf_website/templates/instructor/instructor.html
@@ -63,9 +63,9 @@
         </div>
     </div>
     {% if courses %}
-    {% for dept, dept_data in courses.items %}
-        <h2 class="mt-5 h3">{{ dept }}</h2>
-        {% for course in dept_data.courses %}
+    {% for subdepartment_name, subdepartment_courses in courses.items %}
+        <h2 class="mt-5 h3">{{ subdepartment_name }}</h2>
+        {% for course in subdepartment_courses %}
         <div class="card mt-3">
             <a href="{% url 'course_instructor' course_id=course.id instructor_id=instructor.id %}">
                 <div class="card-header course-header py-4">
