--- a/tcf_website/templates/reviews/duplicate_review_modal.html
+++ b/tcf_website/templates/reviews/duplicate_review_modal.html
@@ -11,9 +11,9 @@
       <div class="modal-body">
           It looks like you've already submitted a review for this class! If you would like, you can go to your
           original review to edit it as you see fit.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+          <div class="row justify-content-center">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+          </div>
       </div>
     </div>
   </div>
