Prevent user from spamming submit for reviews/multiple reviews for sa… (#399)
* Prevent user from spamming submit for reviews/multiple reviews for same class

If required fields are filled, removes submit button so that user can't spam click it or click it multiple times. Avoids multiple submissions of the same review.

Also created backend validation when creating a new review so that a user doesn't create a review for the same course under the same instructor/semester again. Instead gives them an error message to edit their original review.

* Made timeout 3 seconds to ensure

* Refactored some of the code

* Fix pylint issue

* Tell user if they have already reviewed the course

Not finished as I am having trouble debugging but would like to get some sleep now O.O

* User notified of duplicate review and unable to spam click submit button upon submission

Seems to work as intended now but I think it's too late at this point to rush it into the upcoming patch. Some more testing is required and tweaks as deemed necessary.

* Resolve nagging pylint error

* Made modifications per discussion with @alex-shen1

Namely, updated the modal to match site theme, modified the filter to check if the user has reviewed for the given course with the same instructor OR semester before, and updated some formatting.

--- a/tcf_website/templates/reviews/new_review.html
+++ b/tcf_website/templates/reviews/new_review.html
@@ -8,14 +8,16 @@
 {% endblock %}
 
 {% block content %}
+
 <div class="new-review container text-left mx-auto">
   <h1 class="h2 mt-2 mb-4">Write a review</h1>
   <div class="card">
-    <form class="card-body px-md-5" action="{% url 'new_review' %}" method="POST">
+    <form class="card-body px-md-5" id="reviewForm" action="{% url 'new_review' %}" method="POST">
         {% csrf_token %}
         {% include 'reviews/review_form_content.html' %}
+        {% include 'reviews/duplicate_review_modal.html' %}
         <div class="new-review-submit row py-4">
-          <button type="submit" class="btn btn-primary mx-auto">Submit Review</button>
+          <button type="submit" class="btn btn-primary mx-auto" id="submitBtn">Submit Review</button>
         </div>
     </form>
   </div>
@@ -31,5 +33,38 @@
   $(function () {
     $('[data-toggle="tooltip"]').tooltip()
   });
+
+  $(document).ready(function () {
+    // Stop normal submit to check for duplicate review with ajax request
+    $("#reviewForm").submit(function(e) {
+        e.preventDefault();
+
+        $.ajax({
+            type: "POST",
+            url: "/reviews/check_duplicate",
+            data: $("#reviewForm").serialize(),
+            async: false,
+            success: function (check) {
+                if(check.duplicate) {
+                    $("#duplicate-review").modal();
+                } else {
+                    // Timeout button for 3 seconds so user can't spam button while form is submitting
+                    $("#submitBtn").prop("disabled", true);
+                    setTimeout(enableButton, 3000);
+                    // $("#reviewForm") didn't work for some reason
+                    // Not a duplicate review, so proceed with normal form submission for new review
+                    document.getElementById("reviewForm").action = "{% url 'new_review' %}";
+                    document.getElementById("reviewForm").submit();
+                }
+            }
+        });
+    });
+  });
+
+  // Re-enable button
+  function enableButton() {
+        $("#submitBtn").prop("disabled", false);
+  }
+
 </script>
 {% endblock %}
