Fixed mobile issues added word count display

--- a/tcf_website/static/reviews/new_review.css
+++ b/tcf_website/static/reviews/new_review.css
@@ -19,3 +19,11 @@
     margin-left: 4rem;
     /* background-color: var(--dark-color) !important; */
 }
+
+.progress {
+    height: 15px;
+}
+
+#progressbar-message {
+    margin-bottom: 0px;
+}
