--- a/tcf_website/templates/reviews/review.html
+++ b/tcf_website/templates/reviews/review.html
@@ -65,27 +65,27 @@
                 <div class="review-footer row mt-3">
                     <!-- Review Ratings -->
                     <div class="review-ratings col-sm-8 d-flex align-items-end text-center text-muted flex-wrap mb-2">
-                        <div id="review-average" class="text-dark mr-3 mr-sm-4">
+                        <div id="review-average" class="text-dark mr-3 mr-sm-4" data-toggle="tooltip" data-placement="bottom" title="Review Average">
                             <i class="fa fa-star fa-fw"></i>
                             {{ review.average|floatformat:2 }}
                         </div>
-                        <div class="mr-3 mr-sm-4">
+                        <div class="mr-3 mr-sm-4"  data-toggle="tooltip" data-placement="bottom" title="Instructor Rating">
                             <i class="fa fa-user"></i>
                             {{ review.instructor_rating }}
                         </div>
-                        <div class="mr-3 mr-sm-4">
+                        <div class="mr-3 mr-sm-4"  data-toggle="tooltip" data-placement="bottom" title="Enjoyability">
                             <i class="far fa-smile-beam"></i>
                             {{ review.enjoyability }}
                         </div>
-                        <div class="mr-3 mr-sm-4">
+                        <div class="mr-3 mr-sm-4" data-toggle="tooltip" data-placement="bottom" title="Difficulty">
                             <i class="fa fa-dumbbell fa-fw"></i>
                             {{ review.difficulty }}
                         </div>
-                        <div class="mr-3 mr-sm-4">
+                        <div class="mr-3 mr-sm-4"   data-toggle="tooltip" data-placement="bottom" title="Recommendability">
                             <i class="fas fa-thumbs-up"></i>
                             {{ review.recommendability }}
                         </div>
-                        <div>
+                        <div data-toggle="tooltip" data-placement="bottom" title="Hours Per Week">
                             <i class="fa fa-hourglass-half fa-fw"></i>
                             {{ review.hours_per_week }}
                         </div>
