--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -51,6 +51,7 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
           <a class="dropdown-item" href="{% url 'reviews' %}">My reviews</a>
+          <a class="dropdown-item" href="{% url 'courses' %}">Saved Courses</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
         </div>
